# llvm-sample

./: CMakeLists.txt  README.md  main.cpp
cmake/: find_llvm.cmake
examples/: Makefile  foo.c
